# Ertzaintza-registering

./: .breakpoints  .gitignore  .gitmodules  .replit  README.md  WSDL_nuevo.xml  after_wsse_1.xml  after_wsse_3.xml  caller.py  debugs.py  fastapi_server.py  get_keys.py  joined.xml  joined_ids.xml  main.py  oldist.py  perfecto.xml  pyproject.toml  pytest.ini  replit.nix  requirements.txt  short.xml  short_pretty_zeep.xml  signature_template_BST.xml  signature_template_BST_2.xml  signature_template_BST_2_other_algorithm_X509.xml  signature_template_BST_noX509.xml  signed_xml_pretty_xmlsec.xml  soap_call.py  streamlit_app.py  tests.py  tipos.py  tokens.py  zeep_plugins.py
A19/RegistroHostelero/Manuales_Usuario/: A19-REGISTRO HOSTELERO - Servicio Comunicacion XML - Manual de Uso (003).docx  EnvioFicheroXML.wsdl  comunicacionAV.xsd  comunicacionRV.xsd  tiposGenerales.xsd
A19/RegistroHostelero/RegistroHosteleroSOAPUI/: A19-REGISTRO HOSTELERO - Servicio Comunicacion XML - Manual de Uso.docx  A19-RegistroHosteleroXML-soapui-project_VALIDACIONES.xml  A19-RegistroHosteleroXML-soapui-project_VALIDACIONES_pretty.xml  A19PREEMPRESAreadme.txt  drlive-decrypted.pem  drlive.crt
documentations/: help_keys.txt  help_sign.txt  help_verif.txt
inputs/: WSDL_nuevo_orig.xml  WSDL_nuevo_prod.xml  ejemplo.xml  ejemploPV.xml  perfecto2.xml  perfecto2_seeu.xml  signature_template_BST_2_other_algorithm.xml  signature_template_simplesignature.xml
old/: 202004.txt  EnvioFichero.xml  EnvioFichero_local.xml  EnvioFichero_orig.xml  generic_soap_call.py  joined.xml  oldist.py  raw_xml.xml  sc_old.py  short.xml  short_example.xml  short_pretty.xml  short_updated.xml  signed-soapenv.xml  signed_xml_pretty.xml  soap_call.py  ticketbai_WSDL.xml  www-ertzaintza-eus.pem
old/RegistroHostelero 140921/: ERTZAINTZA.html
old/RegistroHostelero 140921/ERTZAINTZA_files/: CalendarPopup.js.descarga  FuncionesDisplay.js.descarga  alquilerVehiculos.css  jquery-ui.min.css  js  mashup_ra_collection  r01gBanner.css  r33-generalCommonSearch.css  r33-visualArea26716.css  ra_collection  ra_collection(1)  utilidades.js.descarga
old/RegistroHostelero 140921/RegistroHostelero/RegistroHosteleroSOAPUI/: Registro-Hostelero-soapui-project_v2.xml  arl2.cer  cert.pem  check_credenrtials.bash  drlive-decrypted.key  drlive.key  extract_credntials.bash  privkey.key  privkey.pem  readme.txt
old/example_keysandcerts/: README.md  doc-signed.xml  doc.xml
old/mycert/: fullchain.pem  privkey.pem
old/soap_requests/: sore.xml
outputs/: after_wsse_1.xml  after_wsse_2.xml  after_wsse_2_pretty.xml  b64s.txt  distinct_strings.txt  distinct_values.json  distinct_values_curated.json  joined.xml  joined_ids.xml  raw_xml.xml  short.xml  short_pretty.xml  short_pretty_xmlsec.xml  signed_xml.xml  signed_xml_pretty.xml  valuesdict.json
src/python-xmlsec/: .gitignore
