[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
streamlit = "^1.27.2"
replit = "3.5.0"
pydantic = "^2.6.2"
zeep = "^4.2.1"
pytest = "^8.0.2"
pyxmlsecurity = "^1.0.0"
requests = "^2.31.0"
dicttoxml = "^1.7.16"
fastapi = "^0.110.0"
lxml = "^5.1.0"
httpx = "^0.27.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"