[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
#fastapi = "^0.109.2"
zeep = "*"
#certifi = "^2024.2.2"
#httpx = "*"
#lxml = "*"
#pydantic = "*"
#requests = "*"
#dicttoxml = "*"
streamlit = "^1.27.2"
replit = "^3.5.0"
pyarrow = "15.0.0"
pyxmlsecurity = "^1.0.0"
xmlsec = "1.3.13"
libxml2dom = "0.5"

fastapi = "^0.109.2"
pytest = "^8.0.2"
#[tool.poetry.dev-dependencies]
#pytest = "^8.0.2"


[tool.setuptools_scm]
version_file = "pkg/_version.py"
write_to = "pkg/_version.py"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"